--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   
   <body>
-    <div class header>Ryan Beadie</div>
+    <div class= "header">
+      <h1>Ryan Beadie</h1>
+    </div>
+    
    </body>
   </html>
