--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <title>Github Page</title>
+     <title>Ryan Beadie resume</title>
       <link rel="stylesheet" href="style.css"/>
   </head>
   
