--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
      <title>Ryan Beadie resume</title>
-      <link rel="stylesheet" href="style.css"/>
+      <link rel="stylesheet" href="resumestyle.css"/>
   </head>
   
   <body>
