--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <body>
     <div class= "header">
       <h1>Ryan Beadie</h1>
-      <p> 2055 Fairmount Ave<br>
-          St. Paul, Mn<br>
-          55115<br>
-          612-267-5655</p>
+      <p> 
+        2055 Fairmount Ave<br>
+        St. Paul, Mn<br>
+        55115<br>
+        612-267-5655<br>
+        <i>ryansteelebeadie@yahoo.com</i>
+      </p>
+      
     </div>
     
    </body>
