--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   
   <body>
    
-    <right><img src="https://cloud.githubusercontent.com/assets/24683993/21399129/dfbc0da0-c76f-11e6-8eb2-bec44330040f.jpg" height="150"><right>
+    <img src="https://cloud.githubusercontent.com/assets/24683993/21399129/
+              dfbc0da0-c76f-11e6-8eb2-bec44330040f.jpg" height="150">
+    
     <div class= "header">  
      <h1>Ryan Beadie</h1>
       <p>
