--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   
   <body>
-   
     
+    <img src="https://cloud.githubusercontent.com/assets/24683993/21399129/dfbc0da0-c76f-11e6-8eb2-bec44330040f.jpg" height="150">    
     
     <div class= "header">  
-     <h1>Ryan Beadie<img src="https://cloud.githubusercontent.com/assets/24683993/21399129/dfbc0da0-c76f-11e6-8eb2-bec44330040f.jpg" height="150"></h1>
+     <h1>Ryan Beadie</h1>
       <p>
         2055 Fairmount Ave<br>
         St. Paul, Mn<br>
