--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         55115<br>
         612-267-5655<br>
         <a
-           href ="mailto:ryansteelebeadie@yahoo.com"><i>ryansteelebeadie@yahoo.com</i></a>
+           href ="mailto:ryansteelebeadie@yahoo.com"><i>ryansteelebeadie@yahoo.com</i>
+        </a>
       </p>
     </div>
     
