--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
            href ="mailto:ryansteelebeadie@yahoo.com"><i>ryansteelebeadie@yahoo.com</i>
         </a>
       </p>
+      <hr width=100>
     </div>
     
     <div class= "profile">
