--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     
     <div class= "profile">
       <h4>Profile</h4>
-        <p>
-          Buisness owner-house flipper
+        <p>Buisness owner-house flipper
         </p>
      </div>
     
