--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <hr width=100%>            
             <ul>
               <li>Leasing agent</li>
-              <li>Mainttenace Coordinator</li>
+              <li>Maintenance Coordinator</li>
             </ul>
        
     </div>
