--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
       <h4> Beadie Properties LLC. 2011-Current</h4>
        <hr width=100%>            
             <ul>
-              <li>Design and build new home</li>
-              <li>Purchase,remodeled and sell homes in Minneapolis area.</li> 
+              <li>Purchase, rehab and sell homes in the Minneapolis area</li>
+              <li>New costruction residential buliding</li> 
             </ul>
       
       <h4> Self-Employed Tradesman 2002-Current</h4> 
         <hr width=100%>      
             <ul>
-              <li>Carpenter-plumber, etc</li>
+              <li>Kitchen and bath remodel</li>
+              <li>Framing and finish carpentry</li>
+              <li>Plumbin</li>
             </ul>
       
       <h4> Spacecrafter LLC. 2000-2002</h4>
