--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     
     <div class= "profile">
+     <hr width=100%>
       <h3>Profile</h3>
         <p>
           Hard working, self motivated individual that prides himself on dependability, honesty, ability to sovlve problems.<br>
