--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <h1>Ryan Beadie</h1>
       <p>
         2055 Fairmount Ave<br>
-        St. Paul, Mn<br>
+        St. Paul, MN<br>
         55115<br>
         612-267-5655<br>
         <a
@@ -30,7 +30,7 @@
         <p>
           Hard working, self motivated individual that prides himself on dependability, honesty, ability to sovlve problems.<br>
          Self-employed independant business owner extensively trained in home remodel.<br>  
-         Years of experince in managing others. Positve and outgoing personality that works well with others.
+         Years of experince in managing others. Positve and outgoing personality that works well in groups.
         </p>
       <hr width= 100%>
      </div>
