--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>
           Hard working, self motivated individual that prides himself on dependability, honesty, ability to sovlve problems.<br>
          Self-employed independant business owner extensively trained in home remodel.<br>  
-         Years of experince in managing others. Positve and outgoing personality that works well in groups.
+         Years of experince in managing others. Positve and outgoing personality that works well in groups.<br>
         </p>
       <hr width= 100%>
      </div>
