--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <ul>
               <li>Kitchen and bath remodels</li>
               <li>Framing and finish carpentry</li>
-              <li>Drywall</li>
+              <li>New garage contruction
+              <li>Finish painter/drywall</li>
             </ul>
       
       <h4> Landloard 2000-Current</h4>
