--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       
       <h4> Spacecrafter LLC.(Owner) 2000-2002</h4>     
             <ul>
-              <li>Specialized in installing Ikea kitchens and closets</li>
+              <li>Specialized in designing and installing Ikea kitchens and closets</li>
             </ul>
       
       <h4> @Home Aprtments 1998-2000 </h4>            
