--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <hr width=100%>
       <h3>Profile</h3>
         <p>
-          Hard working, self motivated individual that prides himself on dependability, honesty, ability to sovlve problems.<br>
+          Hard working, self motivated individual that prides himself on dependability, honesty, and a resourcefulness to sovlve problems.<br>
          Self-employed independant business owner extensively trained in home remodel.<br>  
          Years of experince in managing others. Positve and outgoing personality that works well in groups.<br>
         </p>
