--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
      <hr width=100%>
       <h3>Profile</h3>
         <p>
-          Hard working, self motivated individual that prides himself on dependability, honesty, and a resourcefulness to sovlve problems.<br>
-         Self-employed independant business owner extensively trained in home remodel.<br>  
-         Years of experince managing teams. Positve and outgoing personality that works well in groups.<br>
+          Hard working, self-motivated individual that prides himself on dependability, honesty, and a resourcefulness to sovlve problems.<br>
+         Self-employed independent business owner extensively trained in home remodel.<br>  
+         Years of experience managing teams. Positve and outgoing personality that works well in groups.<br>
         </p>
       <hr width= 100%>
      </div>
@@ -42,7 +42,7 @@
       
       <h4> Beadie Properties LLC.(Owner) 2011-Current</h4> 
             <ul>
-              <li>New costruction residential buliding</li>               
+              <li>New costruction residential building</li>               
               <li>Purchase, rehab and sell homes in the Minneapolis area</li>
             </ul>
       
