--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <hr width=100%>
       <h3>Profile</h3>
         <p>
-          Hard working, self-motivated individual that prides himself on dependability, honesty, and a resourcefulness to sovlve problems.<br>
+          Hard working, self-motivated individual that prides himself on dependability, honesty, and a resourcefulness to solve problems.<br>
          Self-employed independent business owner extensively trained in home remodel.<br>  
          Years of experience managing teams. Positve and outgoing personality that works well in groups.<br>
         </p>
